# aurineAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.bat  Modelfile  Modelfile-native  README.md  RUN_INFO.txt  START_AURACODE.bat  START_AURIN.bat  START_AURINE.bat  START_AURINE_MOBILE_LAN.bat  START_AURIN_MOBILE_LAN.bat  auracode.bat  auracode.ps1  auracode.py  auracode.sh  aurine  aurine.bat  cloud.md  index.html  install.ps1  install.sh  pyproject.toml  render.yaml  requirements.txt  run-mobile-lan.ps1  run.ps1  setup-auracode.bat  setup-auracode.ps1  setup-ollama.ps1  setup.bat  setup.sh  start-auracode.bat  start.sh
app/: agent_tools.py  agents.py  artifacts.py  cli.py  codegen.py  config.py  device.py  llm.py  main.py  memory.py  rag.py  reasoning.py
models/: aurine-native.Modelfile
static/: app.js  index.html  manifest.json  styles.css  sw.js
