[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurine-ai"
version = "1.0.0"
description = "Aurine AI Assistant - Advanced AI with plugins, tools, and agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Aurine"}]
keywords = ["ai", "assistant", "coding", "agent", "plugins"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "openai>=1.50.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.2.0",
    "slowapi>=0.1.9",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "aiohttp>=3.11.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "jinja2>=3.1.0",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
aurine = "app.cli:main"

[project.urls]
Homepage = "https://github.com/aurine/aurine-ai"

[tool.setuptools.packages.find]
include = ["app*"]
